public/styles/layout.css
/*
 * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 * https://css-tricks.com/international-box-sizing-awareness-day/
 * Do not modify these two selectors, please
 */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

/*
 * Global layout stuff
 */

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: #545149;
  background-color: #f4f1ec;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 24px;
}

main {
  width: 90%;
}

#logo {
  font-family: 'Bungee', sans-serif;
}

.bold {
  font-weight: 600;
}

.light {
  font-weight: 300;
}

/* .word-wrap {
  overflow-wrap: break-word;
}
 */
/* Tablet and Desktop Styles */
@media only screen and (min-width: 1024px) {
  body {
    flex-direction: row;
    align-items: flex-start;
  }

  main {
    display: flex;
    flex-direction: column;
    width: 50%;
    margin-right: 10em;
    margin-left: 10em;
    padding-top: 5em;
    padding-bottom: 5em;
  }
}

/*
 * Additional CSS can be defined below or in other CSS files, as per instructions
 */

